# snaca

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  deny.toml  docker-compose.yml  snaca-0.3.0-release-plan.md  snaca-upstream-extension-reply.md  snaca-upstream-extension-requirements.md  snaca-upstream-extension-response-2.md  snaca-upstream-extension-response.md  snaca.toml.example
.cargo/: audit.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/snaca-agent-api/: Cargo.toml
crates/snaca-agent-api/src/: approval.rs  lib.rs  memory.rs  question.rs  store.rs  workspace.rs
crates/snaca-channel-host/: Cargo.toml
crates/snaca-channel-host/src/: approval.rs  config.rs  error.rs  inbound.rs  lib.rs  question.rs  supervisor.rs
crates/snaca-channel-host/tests/: mock_plugin.rs
crates/snaca-channel-protocol/: Cargo.toml
crates/snaca-channel-protocol/src/: codec.rs  errors.rs  jsonrpc.rs  lib.rs  manifest.rs  methods.rs
crates/snaca-cli/: Cargo.toml
crates/snaca-cli/src/: admin.rs  main.rs  memory_inspect.rs  mock_plugin.rs  remote.rs
crates/snaca-cli/tests/: admin_subcommands.rs  memory_subcommands.rs
crates/snaca-core/: Cargo.toml
crates/snaca-core/src/: content.rs  error.rs  ids.rs  lib.rs  message.rs  tool_schema.rs  usage.rs
crates/snaca-engine/: Cargo.toml
crates/snaca-engine/src/: approval.rs  config.rs  engine.rs  error.rs  lib.rs  listener.rs  loop_guard.rs  memory_extractor.rs  memory_fence.rs  question_gate.rs  reranker.rs  tools_factory.rs
crates/snaca-engine/tests/: abort.rs  approval.rs  collapse_tool_results.rs  compaction.rs  concurrent_tools.rs  content_filter.rs  host_context.rs  input_signature.rs  listener.rs  live_tools.rs  loop_guard.rs  memory_extraction.rs  memory_llm_extractor.rs  memory_preamble.rs  memory_recall.rs  memory_rerank.rs  multi_tenant.rs  skill_tool.rs  streaming.rs  streaming_tool_exec.rs  turn_loop.rs  write_tools.rs
crates/snaca-engine/tests/common/: mod.rs
crates/snaca-llm/: Cargo.toml
crates/snaca-llm/src/: classify.rs  client.rs  error.rs  lib.rs  request.rs  response.rs  retry.rs  stream.rs  transport.rs
crates/snaca-llm/src/anthropic/: convert.rs  mod.rs  sse.rs  wire.rs
crates/snaca-llm/src/deepseek/: convert.rs  mod.rs  sse.rs  wire.rs
crates/snaca-llm/tests/: anthropic_http.rs  deepseek_http.rs  live_anthropic.rs  live_anthropic_stream.rs  live_deepseek.rs  live_deepseek_stream.rs
crates/snaca-mcp/: Cargo.toml
crates/snaca-mcp/src/: client.rs  config.rs  error.rs  lib.rs  manager.rs  pool.rs  tool.rs
crates/snaca-mcp/tests/: live_mcp.rs
crates/snaca-memory/: Cargo.toml
crates/snaca-memory/src/: approval.rs  chunk.rs  classify.rs  embed.rs  fastembed_backend.rs  import.rs  import_zip.rs  indexed.rs  lib.rs  pdf_extract.rs  provider.rs  scope.rs  snapshot.rs  store.rs  threat.rs
crates/snaca-plugin-lark/: Cargo.toml
crates/snaca-plugin-lark/src/: main.rs
crates/snaca-sdk/: Cargo.toml
crates/snaca-sdk/src/: channel.rs  config.rs  lib.rs  llm.rs  mcp.rs  memory.rs  runtime.rs  skills.rs  store.rs  tools.rs  workspace.rs
crates/snaca-sdk/tests/: facade_surface.rs
crates/snaca-server/: Cargo.toml  build.rs
crates/snaca-server/src/: commands.rs  config.rs  dispatch.rs  gate.rs  lib.rs  main.rs  outbox.rs  plugin_registry.rs  plugin_tool.rs  question_gate.rs  runtime.rs  scheduler.rs  text_question.rs  tool_factory.rs  typing.rs
crates/snaca-server/src/admin/: approvals.rs  auth.rs  dashboard.rs  mod.rs  outbox.rs  plugins.rs  schedules.rs  system.rs  threads.rs  web.rs
crates/snaca-server/tests/: admin_api_e2e.rs  admin_v1_api_e2e.rs  approval_e2e.rs  attachment_import_e2e.rs  dispatch_concurrent_chats.rs  e2e_smoke.rs  im_recommendations_e2e.rs  live_anthropic_e2e.rs  live_concurrent_chats.rs  live_e2e.rs  live_question_e2e.rs  multi_tenant_e2e.rs  plugin_command_routing.rs  plugin_tool_factory.rs  question_e2e.rs  typing_e2e.rs  typing_throttle.rs
crates/snaca-skills/: Cargo.toml
crates/snaca-skills/src/: error.rs  lib.rs  provider.rs  registry.rs  scope.rs  skill.rs
crates/snaca-state/: Cargo.toml
crates/snaca-state/src/: conversation_store.rs  db.rs  error.rs  lib.rs  models.rs  schema.sql
crates/snaca-tools/: Cargo.toml
crates/snaca-tools-api/: Cargo.toml
crates/snaca-tools-api/src/: context.rs  error.rs  host_context.rs  lib.rs  output.rs  registry.rs  tool.rs
crates/snaca-tools/src/: ask_user_question.rs  bash.rs  edit.rs  fs_util.rs  glob.rs  grep.rs  http_client.rs  lib.rs  ls.rs  memory.rs  multi_edit.rs  read.rs  send_file.rs  session_search.rs  skill_tool.rs  task_output.rs  task_registry.rs  task_stop.rs  todo_write.rs  web_fetch.rs  web_search.rs  write.rs
crates/snaca-workspace/: Cargo.toml
crates/snaca-workspace/src/: layout.rs  lib.rs  path_guard.rs  provider.rs  sandbox.rs
docs/: OPEN_SOURCE_RELEASE_CHECKLIST.md  OPEN_SOURCE_RELEASE_CHECKLIST.zh-CN.md  README.md  SDK.md  SDK.zh-CN.md  SDK_ARCHITECTURE.md  SDK_ARCHITECTURE.zh-CN.md  SDK_MIGRATION.md  SDK_MIGRATION.zh-CN.md  SDK_RELEASE_CHECKLIST.md  SDK_RELEASE_CHECKLIST.zh-CN.md  USAGE.md  USAGE.zh-CN.md  im-plugin-protocol.md  im-plugin-protocol.zh-CN.md
examples/sdk/: basic_agent.rs  custom_llm.rs  custom_store.rs  custom_tool.rs  editor_like_downstream.rs  memory_live_demo.rs  r5_sidecar_downstream.rs  streaming.rs  with_memory.rs
examples/skills/office-extract/: README.md  SKILL.md
scripts/: check-sdk-boundaries.sh  install-minimax-skills.sh  package.sh  secret-scan.sh
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts  resources.ts
web/src/components/: RequireAuth.tsx
web/src/hooks/: useApi.ts
web/src/i18n/: en.json  index.ts  zh.json
web/src/pages/: Approvals.tsx  Dashboard.tsx  Login.tsx  (+5 more)
(+9 files in other folders)
