[package]
name = "snaca-agent-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SNACA agent runtime API traits and interaction contracts"

[dependencies]
snaca-core.workspace = true
async-trait.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
