[package]
name = "snaca-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SNACA agent engine: turn loop, compaction, approval state machine"

[dependencies]
snaca-core.workspace = true
snaca-agent-api.workspace = true
snaca-tools-api.workspace = true
snaca-llm.workspace = true
snaca-state.workspace = true
snaca-workspace.workspace = true
snaca-memory.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
blake3.workspace = true
regex.workspace = true
uuid.workspace = true

[dev-dependencies]
snaca-tools.workspace = true
snaca-skills.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tempfile = "3"
tracing-subscriber = { workspace = true }
