[package]
name = "snaca-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SNACA memory: file-tree memory store + bulk import"

[dependencies]
snaca-core.workspace = true
snaca-agent-api.workspace = true
snaca-workspace.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
blake3.workspace = true
chrono.workspace = true
regex.workspace = true

[features]
default = []
# PDF extraction. Brings in the `pdf-extract` crate, which has its own
# transitive deps for fonts/encodings — opt-in.
pdf = ["dep:pdf-extract"]
# ZIP bundle import — walk an archive of mixed text/markdown/code (and
# PDF when that feature is also on). DOCX/XLSX/PPTX members inside the
# archive are deliberately skipped: snaca-memory delegates Office
# formats to the `office-extract` skill via an out-of-process script
# (see `data-lark/example-skills/office-extract/`).
bundle = ["dep:zip"]

[dependencies.zip]
version = "8"
optional = true
default-features = false
# `deflate` covers the OOXML / generic-bundle case; skip the others to
# minimise the binary size impact when this feature is on.
features = ["deflate"]

[dependencies.pdf-extract]
version = "0.12"
optional = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "fs"] }
