[package]
name = "snaca-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SNACA agent SDK facade"

[[example]]
name = "basic_agent"
path = "../../examples/sdk/basic_agent.rs"

[[example]]
name = "custom_tool"
path = "../../examples/sdk/custom_tool.rs"

[[example]]
name = "streaming"
path = "../../examples/sdk/streaming.rs"

[[example]]
name = "custom_llm"
path = "../../examples/sdk/custom_llm.rs"

[[example]]
name = "with_memory"
path = "../../examples/sdk/with_memory.rs"

[[example]]
name = "custom_store"
path = "../../examples/sdk/custom_store.rs"

[[example]]
name = "memory_live_demo"
path = "../../examples/sdk/memory_live_demo.rs"

[[example]]
name = "r5_sidecar_downstream"
path = "../../examples/sdk/r5_sidecar_downstream.rs"

[dependencies]
snaca-core.workspace = true
snaca-agent-api.workspace = true
snaca-tools-api.workspace = true
snaca-llm.workspace = true
snaca-memory.workspace = true
snaca-tools.workspace = true
snaca-skills.workspace = true
snaca-mcp.workspace = true
snaca-engine.workspace = true
snaca-state.workspace = true
snaca-workspace.workspace = true
snaca-channel-protocol = { workspace = true, optional = true }
snaca-channel-host = { workspace = true, optional = true }
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true

[features]
default = []
channel-protocol = ["dep:snaca-channel-protocol"]
channel-host = ["channel-protocol", "dep:snaca-channel-host"]

[dev-dependencies]
async-trait.workspace = true
serde_json.workspace = true
tempfile = "3"
tracing-subscriber.workspace = true
