[package]
name = "snaca-skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SNACA skills loader (frontmatter markdown, scopes: bundled/tenant/project)"

[dependencies]
snaca-core.workspace = true
snaca-tools-api.workspace = true
snaca-workspace.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
serde.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true
tracing.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
