[package]
name = "snaca-tools-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SNACA tool trait, registry, and approval contract"

[dependencies]
snaca-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
