[package]
name = "snaca-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SNACA built-in tools (Read/Write/Edit/Bash/Grep/Glob/...)"

[dependencies]
snaca-core.workspace = true
snaca-tools-api.workspace = true
snaca-agent-api = { workspace = true, optional = true }
snaca-workspace.workspace = true
snaca-skills = { workspace = true, optional = true }
snaca-memory = { workspace = true, optional = true }
snaca-state = { workspace = true, optional = true }
async-trait.workspace = true
tokio = { workspace = true, features = ["fs", "process", "io-util", "time", "sync"] }
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
chrono.workspace = true
walkdir = { workspace = true, optional = true }
globset = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
data-encoding = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[features]
default = [
    "fs-read",
    "fs-write",
    "shell",
    "todo",
    "web-fetch",
    "web-search",
    "memory",
    "session-search",
    "skills",
    "interactive",
    "send-file",
    "tasks",
    "pdf",
]
fs-read = ["dep:data-encoding", "dep:globset", "dep:regex", "dep:walkdir"]
fs-write = ["fs-read"]
shell = ["dep:dirs", "tasks"]
todo = []
web-fetch = ["dep:reqwest", "dep:url"]
web-search = ["dep:reqwest"]
memory = ["dep:snaca-agent-api", "dep:snaca-memory"]
session-search = ["dep:snaca-state"]
skills = ["dep:snaca-skills"]
interactive = ["dep:snaca-agent-api"]
send-file = []
tasks = ["dep:uuid"]
pdf = ["dep:snaca-memory", "snaca-memory/pdf"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "fs"] }
tempfile = "3"
